[tool.poetry]
name = "christmas_lights"
version = "0.1.0"
description = ""
authors = ["Kevin Kusch <kevinkusch49@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.19.4"
scipy = "^1.6.0"
pydub = "^0.24.1"
pygame = "^2.0.1"
notebook = "^6.1.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
